--- a/src/index.css
+++ b/src/index.css
@@ -13,34 +13,26 @@ body {
   margin: 30px auto;
   text-align: center;
 }
-
 nav{
   padding: 5px;
 }
-
 nav ul {
   padding: 0;
 }
-
 nav ul li {
   display: inline-block;
   margin: 0 10px;
 }
-
-.listen {
+.album-list {
   padding: 20px;
   margin-bottom: 20px;
-  
 }
-
-ul {
+.album-list ul{
   padding: 0;
   list-style-type: none;
 }
-
-li {
+.album-list li {
   padding: 10px;
   margin: 10px auto;
   border-radius: 10px;
 }
-
